# envoy

./: .dockerignore  APPLICATION_DATA_FLOW_FIX.md  CODEOWNERS  COMPILATION_FIXES.md  CRITICAL_FULL_REBUILD.sh  DIAGNOSE_BUILD.md  FIXED_BUILD_ISSUE.md  FIX_COMPILER_BUG.md  HOW_TO_REBUILD_V2.md  KTLS_AES256_LOGGING_FIX.md  KTLS_COMPLETE.md  KTLS_COMPREHENSIVE_LOGGING.md  KTLS_COMPREHENSIVE_LOGGING_FIX.md  KTLS_FD_FIX_COMPLETE.md  KTLS_FINAL_FIX.md  KTLS_SECRET_EXTRACTION_FIX.md  KTLS_STATUS.md  KTLS_STATUS_FINAL.md  KTLS_TCP_ULP_FIX.md  QUICK_START.md  README.md  README_RUSTLS.md  READ_ME_FIRST_KTLS.md  REBUILD_AND_TEST.md  REBUILD_AND_TEST_FINAL.md  REBUILD_FINAL_KTLS.sh  REBUILD_KTLS_IN_DOCKER.md  REBUILD_KTLS_SIMPLE.sh  REBUILD_KTLS_V3.sh  REBUILD_RUST_ONLY.sh  REBUILD_V2.sh  REBUILD_WITH_KTLS_FIX.sh  REVERSE_CONNECTION_DESIGN_IMPLEMENTATION.md  RUN_TESTS.sh  RUSTLS_IMPLEMENTATION.md  START_HERE.md  START_HERE_KTLS.md  START_HERE_KTLS_V3.md  TESTING_GUIDE.md  TLS_APPLICATION_DATA_FIX.md  (+5 more)
.github/: config.yml
api/: BUILD
bazel/: googletest.patch  repository_locations.bzl
changelogs/: current.yaml
ci/: Dockerfile-envoy-debug-image-db  Dockerfile-envoy-image-db  Dockerfile-envoy-ntnx  do_ci.sh
configs/: debug_test.py  production_reverse_connection_test.yaml  production_test_reverse_connection.sh  rebuild_and_test.sh  reverse_connection_downstream.yaml  (+7 more)
source/extensions/transport_sockets/rustls/rustls_ffi/: Cargo.toml
source/extensions/transport_sockets/rustls/rustls_ffi/src/: key_extraction.rs  ktls.rs  lib.rs  lib.rs.backup  lib_handshake_fix.rs
(+484 files in other folders)
