[package]
name = "envoy-rustls-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Envoy Project"]
description = "Rustls FFI bindings for Envoy with kTLS support"
license = "Apache-2.0"

[lib]
name = "envoy_rustls_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.0"
webpki-roots = "0.26"
libc = "0.2"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

